# mangoEvolve

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  INDEX.txt  PROJECT_SUMMARY.txt  QUICKSTART.txt  README.md  demo.py  pyproject.toml  run_tetris_evolution.py  tetris_agent.py  tetris_env.py  tetris_evaluator.py  tetris_pufferlib.py  verify_best_solutions.py
.github/workflows/: test.yml
analysis/: analysis_report.md  compute_strict_scores.py  log_analysis_results.json  parse_logs.py  strict_scores_results.json
blog/: rough_draft.md
configs/: example_config_haiku.yaml  example_config_restricted_env.yaml  example_config_sonnet.yaml  openrouter_claude_opus_ultrathink.yaml  openrouter_gemini_flash.yaml  openrouter_gemini_flash_thinking.yaml  openrouter_gemini_pro.yaml  openrouter_gpt5_mixed.yaml  openrouter_opus_thinking_mixed.yaml  shinka_evolve_circle_packing.yaml
configs/ablations/: all_ablations.yaml  baseline.yaml  no_query_llm.yaml  no_scratchpad.yaml  no_trial_reasoning.yaml
docs/: CONTEXT_SIZE_ANALYSIS.md  DESIGN.md  DESIGN_CIRCLE_PACKING.md  IMPLEMENTATION_TODO.md  context_report.md
docs/prompts/: pr1_trials_repl_variable.md  pr2_scratchpad_repl_variable.md  pr3_continuous_evolution.md  pr4_child_llm_queries_plan.md
experiments/: poc_circle_packing_integration.py  poc_cost_tracker.py  poc_evaluator.py  poc_integration.py  poc_repl.py
experiments/circle_packing_gemini_flash_20251224_232035/: root_llm_log.jsonl
experiments/circle_packing_gemini_flash_20251224_232103/: cost_tracking.json  experiment.json  root_llm_log.jsonl
presentation/: presentation.md
presentation/code/: visualize_heilbronn.py  (+2 more)
problems/: README.md  __init__.py
profiling/: PROFILING_REPORT.md  profile_bottlenecks.py  profile_results.prof
saved_experiments/: ANALYSIS.md  RESULTS_BLOG_POST.md
scripts/: get_results.sh  run_ablations.py  run_llm_srbench.sh  visualize_packing.py
tests/: conftest.py  test_code_extraction.py  test_config.py  test_cost_tracker.py  test_e2e.py  test_evaluator.py  test_evolution_api.py  test_exceptions.py  test_integration.py  test_llm_client.py  test_llm_selection.py  test_logger.py  test_main.py  test_parallel_worker.py  test_prompt_substitution.py  test_prompts.py  test_repl.py  test_repl_proxies.py  test_resume.py  test_root_llm.py
viewer/: package.json  tsconfig.json
(+2707 files in other folders)
